# analise_dados_plotly

./: .gitignore  Untitled.ipynb  arrecadacao_por_ato.csv  atos.csv  percentual_2005-2020.csv  percentual_atos.csv  percentual_atos_2005-2013.csv  percentual_atos_2014-2020.csv  pyproject.toml  registro_de_imoveis.xlsx
