[tool.poetry]
name = "analise_dados_plotly"
version = "0.1.0"
description = ""
authors = ["Paulo <pauloestrella1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.1.0"
pandas = "^1.3.0"
notebook = "^6.4.0"
jupyter = "^1.0.0"
jupyter-dash = "^0.4.0"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
